--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amit's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-text">AMIT DATTA'S</span> WORLD</h1>
+            <h3>Web Designer & Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eveniet quis ex quam voluptatum iste, nesciunt deleniti vero eligendi corrupti vitae exercitationem impedit quasi necessitatibus asperiores!</p>
+            <a class="hire-btn" href="https://www.linkedin.com/in/amit-datta-656a36235/" target="_blank">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="./images/jhankar.png" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
