dream big area added

--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
             <h1><span class="orange-text">AMIT DATTA'S</span> WORLD</h1>
             <h3>Web Designer & Web Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eveniet quis ex quam voluptatum iste, nesciunt deleniti vero eligendi corrupti vitae exercitationem impedit quasi necessitatibus asperiores!</p>
-            <a class="hire-btn" href="https://www.linkedin.com/in/amit-datta-656a36235/" target="_blank">Hire Me</a>
+            <a class="link-btn" href="https://www.linkedin.com/in/amit-datta-656a36235/" target="_blank">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="./images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="./images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore vero optio delectus veniam saepe, id doloremque sequi porro laudantium nam officia hic, voluptates pariatur sit in, ea voluptatum. Non, alias!</p>
+            <a class="link-btn" href="https://github.com/amitdatta007" target="_blank">DOWNLOAD RESUME</a>
         </div>
     </section>
 
