--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flaxible">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange-text">AMIT DATTA'S</span> WORLD</h1>
             <h3>Web Designer & Web Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eveniet quis ex quam voluptatum iste, nesciunt deleniti vero eligendi corrupti vitae exercitationem impedit quasi necessitatibus asperiores!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eveniet quis ex quam voluptatum iste, nesciunt deleniti vero eligendi corrupti vitae exercitationem impedit quasi necessitatibus asperiores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, eius.</p>
             <a class="link-btn" href="https://www.linkedin.com/in/amit-datta-656a36235/" target="_blank">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="./images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flaxible">
         <div class="half-width">
             <img src="./images/jhankar2.png" alt="">
         </div>
@@ -34,6 +34,24 @@
             <a class="link-btn" href="https://github.com/amitdatta007" target="_blank">DOWNLOAD RESUME</a>
         </div>
     </section>
-
+    <section class="experiance">
+        <h1>Experiances</h1>
+        <div class="flaxible">
+            <div id="junior" class="ex-item">
+                <h1>Junior Web Developer</h1>
+                <h2 class="orange-text">2022 - 2023</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit ducimus eligendi doloremque veniam ipsam minus aliquid sequi dolorum repudiandae animi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi aliquam voluptate reiciendis quis perspiciatis corrupti molestiae quibusdam cum velit illo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, dolor.</p>
+            </div>
+            <div id="senior" class="ex-item">
+                <h1>Senion Web developer</h1>
+                <h2 class="orange-text">2023 - Current</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis est porro voluptate, similique vel nam laborum ullam mollitia praesentium incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, enim perspiciatis fugiat nesciunt aspernatur soluta veniam quidem excepturi eaque optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, porro.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Amit Datta 2023, a Programming Hero Student.</p>
+    </footer>
 </body>
 </html>
